Software_and_Programming/STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.cdt.ui/stm32f3discovery_hal_lib.build.log
00:40:36 **** Incremental Build of configuration Debug for project stm32f3discovery_hal_lib ****
make all 
Building file: ../Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/usbd_audio.c
Invoking: MCU GCC Compiler
/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -DSTM32F30 -DSTM32F3DISCOVERY -DSTM32F3 -DSTM32F303VCTx -DSTM32 -DUSE_HAL_DRIVER -DSTM32F303xC -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/CMSIS/core" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/CMSIS/device" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/HAL_Driver/Inc/Legacy" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/HAL_Driver/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/DFU/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/MSC/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/Template/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Core/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Utilities/Components/Common" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Utilities/Components/l3gd20" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Utilities/Components/lsm303dlhc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Utilities/STM32F3-Discovery" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/USB_F3_Test/CUBE/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/MSC/Inc" -I"/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Core/Inc" -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/usbd_audio.d" -MT"Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/usbd_audio.o" -o "Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/usbd_audio.o" "../Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/usbd_audio.c"
In file included from ../Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/usbd_audio.c:65:0:
/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Inc/usbd_audio.h:94:68: error: 'USBD_AUDIO_FREQ' undeclared here (not in a function)
 #define AUDIO_OUT_PACKET                              (uint32_t)(((USBD_AUDIO_FREQ * 2 * 2) /1000)) 
                                                                    ^
/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Inc/usbd_audio.h:101:67: note: in expansion of macro 'AUDIO_OUT_PACKET'
 #define AUDIO_TOTAL_BUF_SIZE                          ((uint32_t)(AUDIO_OUT_PACKET * AUDIO_OUT_PACKET_NUM))
                                                                   ^
/Users/Emmet/Projects/Cheat_Sheets/STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Inc/usbd_audio.h:142:36: note: in expansion of macro 'AUDIO_TOTAL_BUF_SIZE'
   uint8_t                   buffer[AUDIO_TOTAL_BUF_SIZE];
                                    ^
make: *** [Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/usbd_audio.o] Error 1

00:40:37 Build Finished (took 284ms)

